--- a/src/component/Navbar/navbar.module.css
+++ b/src/component/Navbar/navbar.module.css
@@ -1,3 +1,10 @@
+* {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   font-family: "Nunito", sans-serif;
+ }
+
 .nav {
    background: #603bbb;
    height: 60px;
@@ -9,15 +16,23 @@
 
 .title {
    color: #fff;
+   font-family: "Nunito", sans-serif;
 }
 
-.navName_button {
+.navLine {
    display: flex;
    align-items: center;
    align-items: center;
 }
 
-.navName_button button {
-   height: 30px;
+.navLine button {
+   border: 0;
+   border-radius: 5px;
    margin-left: 30px;
+   padding: 10px;
+   background: linear-gradient(266deg, rgba(255,114,73,1) 0%, rgba(255,182,39,0.9962359943977591) 100%);
+}
+
+.userName {
+   color: #fff;
 }
