--- a/src/component/Login/login.module.css
+++ b/src/component/Login/login.module.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   justify-content: center;
   background: linear-gradient(266deg, rgba(255,114,73,1) 0%, rgba(255,182,39,0.9962359943977591) 100%);
-  box-shadow: 0 30px 90px -20px rgba(0, 0, 0, 0.8);
+  box-shadow: 10px 30px 70px -50px rgba(0, 0, 0, 0.8);
 }
 
 .title {
