--- a/src/component/Main/main.module.css
+++ b/src/component/Main/main.module.css
@@ -5,7 +5,7 @@
 .chat_box {
    text-align: center;
    padding: 30px;
-   background: rgb(41, 39, 39);
+   background: #222222;
    height: 100%;
 }
 
